# Pioneer3AT-Seguidor-Matlab

./: .gitignore  LICENSE  README.md  main.cpp
corredor/: corredor.m  get_lidar.m
gazebo-ros/: pioneer3at_ros.urdf
gazebo-ros/gazebo/: cic_map.sdf  graco_closed_doors.sdf  graco_open_doors.sdf  graco_open_doors_harmonic.sdf  my_world.sdf  wg_world.sdf
gazebo-ros/gazebo/cic_map/: model.config  model.sdf
gazebo-ros/gazebo/cic_map/meshes/: cic_map.dae
gazebo-ros/gazebo/hokuyo/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
gazebo-ros/gazebo/mezanino_graco/meshes/: mezanino_graco_portas_abertas.dae
gazebo-ros/gazebo/mezanino_graco_closed_doors/: model.config  model.sdf
gazebo-ros/gazebo/mezanino_graco_closed_doors/meshes/: mezanino_graco_portas_fechadas.dae
gazebo-ros/gazebo/mezanino_graco_open_doors/: model.config  model.sdf
gazebo-ros/gazebo/pioneer3at/: model.sdf
gazebo-ros/matlab-gazebo/: gazebo_seguidor.m  matlab_gazebo_ros.m  teleportModel.m
gazebo-ros/treinamento/: FLA.m  Myp3atPID.m  p3at_pid_cost.m  pso.m  run_fla_p3at.m  run_pso_p3at.m
gazebo-ros/treinamento/coppelia/: Pioneer.ttm  Pioneer_4_rodas_01.ttt  Pioneer_4_rodas_02.ttt  Pioneer_4_rodas_03.ttt  Pioneer_4_rodas_04.ttt  Pioneer_4_rodas_05.ttt  Pioneer_4_rodas_06.ttt  Pioneer_4_rodas_07.ttt  Pioneer_4_rodas_08.ttt  Pioneer_4_rodas_treinamento.ttt
gazebo-ros/treinamento/corredor_meio/: main.m
gazebo-ros/treinamento/src/: CMakeLists.txt  README.md  package.xml
gazebo-ros/treinamento/src/config/: pioneer3at.rviz  pioneer3at_display.rviz  ros_gz_bridge.yaml
gazebo-ros/treinamento/src/docs/: setup.tex
gazebo-ros/treinamento/src/launch/: bridge.launch.py  display.launch.py  gazebo.launch.py  simulation.launch.py  spawn_robot.launch.py
gazebo-ros/treinamento/src/urdf/: pioneer3at.urdf.xacro  pioneer3at_ros.urdf
gazebo-ros/treinamento/src/worlds/: mezanino_graco.sdf  pioneer_world.sdf
gazebo-ros/treinamento/src/worlds/meshes/: mezanino_graco.stl
seguidor-parede/: get_lidar.m  seguidor.m
(+1 files in other folders)
