<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pioneer3at</name>
  <version>0.2.0</version>
  <description>
    Modelo do Pioneer 3-AT e arquivos de simulação para ROS 2 Humble e
    Gazebo Harmonic (gz-sim). Migrado do pacote ROS 1 / Gazebo Classic original
    de Dereck Wonnacott.
  </description>

  <maintainer email="filipeernestoramos@gmail.com">Filipe Ramos</maintainer>
  <license>BSD</license>

  <author email="dereck@gmail.com">Dereck Wonnacott</author>
  <author email="filipeernestoramos@gmail.com">Filipe Ramos</author>

  <url type="repository">https://github.com/dawonn/ros-Pioneer3AT</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Integração ROS 2 <-> Gazebo Harmonic -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Descrição e visualização do robô -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Controle / teleoperação -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
